Fixed text alignment :dogcode:

--- a/code/Items/Equipment/C4/C4Timer/C4Timer.scss
+++ b/code/Items/Equipment/C4/C4Timer/C4Timer.scss
@@ -1,8 +1,8 @@
 ﻿C4Timer
 {
     text-align: center;
-    color: green;
-    font-size: 24px;
-    width: 100px;
-    height: 100px;
+    color: red;
+    font-size: 22px;
+    align-items:center;
+    justify-content: center;
 }
